# FxmeFX

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
Source/Cab/: CMakeLists.txt  Cab.cpp  Cab.h  CabComponent.cpp  CabComponent.h  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Cabinet/: CMakeLists.txt  Cabinet.cpp  Cabinet.h  CabinetComponent.cpp  CabinetComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Cabinet/IR/: Readme.txt
Source/Compressor/: CMakeLists.txt  FxmeCompressor.jucer  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/ConvolReverb/: CMakeLists.txt  ConvolReverb.cpp  ConvolReverb.h  ConvolReverbComponent.cpp  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Equalizer/: CMakeLists.txt  Equalizer.cpp  Equalizer.h  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Limiter/: CMakeLists.txt  Limiter.cpp  Limiter.h  LimiterComponent.cpp  LimiterComponent.h  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Oct/: CMakeLists.txt  Oct.cpp  Oct.h  OctComponent.cpp  OctComponent.h  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/PdCommon/: PdExternal.cmake  PdJuceHost.h
Source/PdCommon/JuceHeaderShim/: JuceHeader.h
Source/StereoDelay/: CMakeLists.txt  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoDelay.cpp
Source/Transient/: CMakeLists.txt  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TransientComponent.cpp
Source/Tube/: CMakeLists.txt  PdMain.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/VuMeter/: VuMeter.h  VuMeterComponent.cpp  VuMeterComponent.h
doc/: pdconversion.md
